<resources>
    <string name="app_name">Pick Me Up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="home">Home</string>
    <string name="menu">Menu</string>
    <string name="title_activity_profile_sidebar">ProfileSidebar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Log Out</string>

    <string name="menu_change_profile_image">Change Profile pic</string>
    <string name="menu_session_expiration">Session</string>
    <string name="menu_change_name">Change Name</string>

    <!--Login Screen Strings-->
    <string name="description">The Feel Good App</string>
    <string name="login">Log in</string>
    <string name="register">Register</string>

    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="login_title">Welcome Back! Please log in.</string>
    <string name="register_title">Welcome! Sign up Here!</string>

    <!--Home Fragment Strings-->
    <string name="home_title">Feeling Down? Look through this Feed of Feel Good Content!</string>

    <!--Content Fragment Strings-->
    <string name="tags">Select Categories you Like!</string>
    <string name="search">Search for a Category...</string>
    <string name="tag_hint">Click on your tags to remove them</string>

    <string-array name="categories">
        <item>pets</item>
        <item>food</item>
        <item>outdoors</item>
        <item>sports</item>
        <item>fashion</item>
    </string-array>
</resources>