<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContentFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/menu_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tags"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:layout_marginTop="20dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tag_hint"
            android:layout_gravity="center_horizontal"
            />

        <co.lujun.androidtagview.TagContainerLayout
            android:id="@+id/myTagView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:tag_clickable="true"
            app:tag_text_size="20sp"
            app:tag_theme="pure_teal"
            app:tag_background_color="@color/white"
            app:tag_horizontal_padding="20dp"
            app:container_gravity="center"
            />

        <EditText
            android:id="@+id/searchText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/search"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"
            />

        <co.lujun.androidtagview.TagContainerLayout
            android:id="@+id/tagView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tag_clickable="true"
            app:tag_text_size="20sp"
            app:tag_theme="pure_cyan"
            app:tag_horizontal_padding="20dp"
            app:container_gravity="center"
            />

    </LinearLayout>

</FrameLayout>